--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,29 +1,31 @@
-<navbar class="navbar navbar-expand-md">
-  <navbar-brand>
-    <a class="navbar-brand-sm" href="home"><img [src]="images[0]" alt="nav logo" height="55em" width="55em"></a>
-  </navbar-brand>
-  <links>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto mt-lg-0">
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['home']" href="home">Home</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['events']" href="events">Events</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['news']" href="news">News</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['eboard']" href="eboard">E-Board</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['apply']" href="apply">Apply for Membership</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['login']" href="login">Admin Login</a>
-        </li>
-      </ul>
-    </div>
-  </links>
+<navbar class="navbar navbar-expand-lg navbar-light" style="background-color: white">
+
+  <a class="navbar-brand-sm" href="home"><img [src]="images[0]" alt="nav logo" height="55em" width="55em"></a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarToggle">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['home']" href="home">Home</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['events']" href="events">Events</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['news']" href="news">News</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['eboard']" href="eboard">E-Board</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['apply']" href="apply">Apply for Membership</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['login']" href="login">Admin Login</a>
+      </li>
+    </ul>
+  </div>
 </navbar>
