--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -21,7 +21,7 @@
             </div>
           </div>
           <div class="col-4" style="padding-top: 1%">
-            <button style="float:right" class="btn btn-primary"><a style="color:white" href="{{news.link}}">link</a></button>
+            <a class="btn btn-primary" style="color:white" href="{{news.link}}">link</a>
           </div>
         </div>
       </div>
