--- a/src/app/home-carousel/home-carousel.component.html
+++ b/src/app/home-carousel/home-carousel.component.html
@@ -1,7 +1,7 @@
 <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
   <mdb-carousel-item>
     <div class="view w-100">
-      <img [src]="images[0]" alt="Random first slide" height="{{height}}" width="{{width}}">
+      <img [src]="images[0]" alt="Random first slide" height="{{innerHeight}}" width="{{width}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
@@ -11,7 +11,7 @@
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
-      <img [src]="images[1]" alt="Random second slide" height="{{height}}" width="{{width}}">
+      <img [src]="images[1]" alt="Random second slide" height="{{innerHeight}}" width="{{width}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
@@ -21,7 +21,7 @@
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
-      <img [src]="images[2]" alt="Random third slide" height="{{height}}" width="{{width}}">
+      <img [src]="images[2]" alt="Random third slide" height="{{innerHeight}}" width="{{width}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
