--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,5 +11,6 @@
 	</div>
 	<div class="input" style="padding-bottom:5%">
 	<center><input type="submit" class="btn btn-primary" value="Login"></center>
+	<center><a class="btn btn-success" href="/sign-up">Sign Up</a></center>
 	</div>
 </form>
