--- a/src/app/apply/apply.component.html
+++ b/src/app/apply/apply.component.html
@@ -7,24 +7,24 @@
         <div class="titleHolder" style="padding-top:10px; padding-bottom:10px;">
           <h2>Apply for Membership</h2>
         </div>
-        <form>
+        <form #applicantForm="ngForm" (ngSubmit)="apply()" novalidate>
           <div class = "textHolder">
-            <input type="text" name="name" placeholder="Name" required style="width: 100%;"><br>
+            <input [(ngModel)]="applicant.name" class="form-control" type="text" name="name" placeholder="Name" required style="width: 100%;"><br>
           </div>
           <div class = "textHolder">
-            <input type="text" name="email" placeholder="Email Address" required style="width: 100%;"><br>
+            <input [(ngModel)]="applicant.email" class="form-control" type="text" name="email" placeholder="Email Address" required style="width: 100%;"><br>
           </div>
           <div class = "textHolder">
-            <input type="checkbox" name="belay"> Are you Belay Certified?<br>
+            <input [(ngModel)]="applicant.belayCertified" type="checkbox" name="belay"> Are you Belay Certified?<br>
           </div>
           <div class = "textHolder">
-            <input type="checkbox" name="lead"> Are you Lead Certified?<br>
+            <input [(ngModel)]="applicant.year" class="form-control" type="number" name="year" placeholder="Expected Grad Year" required style="width: 35%;"><br>
           </div>
           <div class = "textHolder">
-            <input type="text" name="reason" placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
+            <input [(ngModel)]="applicant.reasoning" class="form-control" type="text" name="reasoning" placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
           </div>
           <div class = "buttonHolder">
-            <input type="submit" value="Submit" mdbBtn color="primary" mdbWavesEffect>
+             <input class="btn btn-success" type="submit" name="">
 
           </div>
         </form>
