--- a/src/app/home-carousel/home-carousel.component.html
+++ b/src/app/home-carousel/home-carousel.component.html
@@ -4,9 +4,9 @@
       <img [src]="images[0]" alt="Random first slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
-    <div class="carousel-caption">
-      <h1 class="h1-responsive">Welcome to QU Rock Climbing</h1>
-      <p>First text</p>
+    <div class="carousel-caption" style="padding-bottom: 150px; font-size: 30px; font-family: Arial, Helvetica, sans-serif">
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000">Welcome to the Rock Climbing Club!</h1>
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000">at Qunnipiac University</h1>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
@@ -14,19 +14,11 @@
       <img [src]="images[1]" alt="Random second slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
-    <div class="carousel-caption">
-        <h1 class="h1-responsive">Pic 2</h1>
-      <p>Secondary text</p>
-    </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
       <img [src]="images[2]" alt="Random third slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
-    </div>
-    <div class="carousel-caption">
-        <h1 class="h1-responsive">Pic 3</h1>
-      <p>Third text</p>
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
