--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,65 +2,59 @@
   <div style="background-color: white;">
 
     <app-home-carousel></app-home-carousel>
-    
-    <div class="row" style="margin-top: 4%; margin-bottom: 2%">
-      <div style="margin: auto;">
-        <h3><i>Climbers of all Levels Welcome</i></h3>
+
+    <div class="container" style="margin-right:10%">
+      <div class="row" style="margin-top: 20px; margin-bottom: 2%">
+        <div class="col-lg-8 text-center">
+          <hr>
+          <h2>What is the Climbing Club?</h2>
+          <hr>
+          <h6>Good Question! The simplest answer is that the climbing club is a loosely organized group of fellow
+            adventurers at Quinnipiac University who enjoy to climb all around!
+            This includes bouldering, sport climbing, trad climbing and even other outdoor activity that we think is
+            fun.
+          </h6>
+          <br>
+          <h6>Our primary mission is to get climbers of all skill levels interacting with one another. Whether you're a
+            complete beginner or a seasoned vet, the QU Rock Climbing Club is a great
+            resource to meet fellow enthusiasts!</h6>
+        </div>
       </div>
     </div>
 
-    <div class="card-deck" style="margin-top: 2%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%">
-        <!-- Card -->
-        <mdb-card>
-          <!--Card content-->
-          <mdb-card-body>
-            <!--Title-->
-            <mdb-card-title>
-              <h4>About Us</h4>
-            </mdb-card-title>
-            <!--Text-->
-            <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
-              content. Some quick example text to build on the card title and make up the bulk of the card's
-              content.Some quick example text to build on the card title and make up the bulk of the card's
-              content.Some quick example text to build on the card title and make up the bulk of the card's
-              content.Some quick example text to build on the card title and make up the bulk of the card's
-              content.
-            </mdb-card-text>
-          </mdb-card-body>
-        </mdb-card>
+    <div class="container-fluid no-padding">
+      <div class="row no-gutter">
+        <div class="col-lg-3 col-sm-6">
+          <!-- <a></a> -->
+          <img [src]="joinUsImg">
+          <div class="infoBox">
+            <div class="infoBoxContent">
+              <h3>Follow Us!</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="infoBox">
+            <div class="infoBoxContent">
+              <h3>Follow Us!</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="infoBox">
+            <div class="infoBoxContent">
+              <h3>Follow Us!</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="infoBox">
+            <div class="infoBoxContent">
+              <h3>Follow Us!</h3>
+            </div>
+          </div>
+        </div>
       </div>
-
-    <div class="card-deck" style="margin-top: 2%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%">
-      <!-- Card -->
-      <mdb-card>
-        <!--Card content-->
-        <mdb-card-body>
-          <!--Title-->
-          <mdb-card-title>
-            <h4>Find Us On...</h4>
-          </mdb-card-title>
-          <!--Text-->
-          <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
-            content.
-          </mdb-card-text>
-        </mdb-card-body>
-      </mdb-card>
-
-      <!-- Card -->
-      <mdb-card>
-        <!--Card content-->
-        <mdb-card-body>
-          <!--Title-->
-          <mdb-card-title>
-            <h4>Gallery</h4>
-          </mdb-card-title>
-          <!--Text-->
-          <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
-            content.
-          </mdb-card-text>
-          <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-        </mdb-card-body>
-      </mdb-card>
     </div>
   </div>
 </div>
