--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,11 @@
 .form-border{
 	border: 1px solid black;
 }
+
+.infoBox {
+	background-image: 'src/app/includes/home/image1.JPG'
+}
+
+.infoBoxContent {
+
+}
