final changes until further notice - home

--- a/src/app/home-carousel/home-carousel.component.html
+++ b/src/app/home-carousel/home-carousel.component.html
@@ -5,8 +5,8 @@
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption" style="padding-bottom: 150px; font-size: 30px; font-family: Arial, Helvetica, sans-serif">
-      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000">Welcome to the Rock Climbing Club!</h1>
-      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000">at Qunnipiac University</h1>
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000" height="{{introText}}">Welcome to the Rock Climbing Club!</h1>
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000" height="{{introText}}">at Qunnipiac University</h1>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
