--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,58 +3,103 @@
 
     <app-home-carousel></app-home-carousel>
 
-    <div class="container" style="margin-right:10%">
+    <div class="container" style="margin-top: 100px; margin-bottom: 100px">
       <div class="row" style="margin-top: 20px; margin-bottom: 2%">
-        <div class="col-lg-8 text-center">
-          <hr>
+        <div class="col-3"></div>
+        <div class="col-lg-6 text-center">
           <h2>What is the Climbing Club?</h2>
           <hr>
           <h6>Good Question! The simplest answer is that the climbing club is a loosely organized group of fellow
             adventurers at Quinnipiac University who enjoy to climb all around!
             This includes bouldering, sport climbing, trad climbing and even other outdoor activity that we think is
-            fun.
-          </h6>
+            fun.</h6>
           <br>
           <h6>Our primary mission is to get climbers of all skill levels interacting with one another. Whether you're a
-            complete beginner or a seasoned vet, the QU Rock Climbing Club is a great
-            resource to meet fellow enthusiasts!</h6>
+            complete beginner or a seasoned vet, the QU Rock Climbing Club is a great resource to meet fellow
+            enthusiasts!</h6>
         </div>
+        <div class="col-3"></div>
       </div>
     </div>
 
     <div class="container-fluid no-padding">
       <div class="row no-gutter">
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-3 col-sm-6" style="padding-left: 0px;">
           <!-- <a></a> -->
-          <img [src]="joinUsImg">
+          <img [src]="images[1]" width="400px" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
-              <h3>Follow Us!</h3>
+              <div class="infoText">
+                Follow Us!
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
+          <img [src]="images[0]" width="400px" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
-              <h3>Follow Us!</h3>
+              <div class="infoText">
+                Follow Us!
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
+          <img [src]="images[2]" width="400px" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
-              <h3>Follow Us!</h3>
+              <div class="infoText">
+                Follow Us!
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
+          <img [src]="images[3]" width="400px" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
-              <h3>Follow Us!</h3>
+              <div class="infoText">
+                Follow Us!
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <section id="contact">
+      <div class="container" style="margin-top:80px; margin-bottom:80px">
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-lg-6 text-center">
+            <h2>Contact Us!</h2>
+            <hr class="primary">
+            <h6>If you're looking for climbing partners or have general inquiries about climbing at Quinnipiac, reach
+              out to us through our Instagram Page. For club specific questions give us an email!</h6>
+          </div>
+          <div class="col-3"></div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-sm-6 text-center">
+            <div style="float:right">
+              <a href="https://www.instagram.com/qurockclimbing/?hl=en" style="color:black"><i
+                  class="fab fa-instagram fa-5x"></i>
+                <h6>@qurockclimbing</h6>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-6 text-center">
+            <div style="float:left">
+              <a href="mailto:qurockclimbing@gmail.com" style="color:black"><i class="far fa-envelope fa-5x"></i>
+                <h6>qurockclimbing@gmail.com</h6>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </div>
 </div>
