cleaning up ol sport

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,9 +6,8 @@
       <div>
         <label style="text-align: center;">Contact us:</label>
         <br>
-        <a style="text-decoration: none;"><i class="fab fa-facebook right"></i> Facebook</a>
-        <a style="text-decoration: none;"><i class="fas fa-address-book right"></i> Address</a>
-        <a style="text-decoration: none;"><i class="fas fa-phone-square right"></i> Phone number</a>
+        <a style="text-decoration: none; color: white; margin-right: 10px;" href="https://www.instagram.com/qurockclimbing/?hl=en"><i class="fab fa-instagram right"></i> Instagram</a>
+        <a style="text-decoration: none; color: white;" href="mailto:qurockclimbing@gmail.com"><i class="fas fa-address-book right"></i> Email</a>
       </div>
     </div>
   </footer>
