fixed your dumb carousel

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
       <div class="row no-gutter">
         <div class="col-lg-3 col-sm-6" style="padding-left: 0px;">
           <!-- <a></a> -->
-          <img [src]="images[1]" width="400px" height="{{picHeight}}" class="img-responsive">
+          <img [src]="images[1]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img [src]="images[0]" width="400px" height="{{picHeight}}" class="img-responsive">
+          <img [src]="images[0]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img [src]="images[2]" width="400px" height="{{picHeight}}" class="img-responsive">
+          <img [src]="images[2]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img [src]="images[3]" width="400px" height="{{picHeight}}" class="img-responsive">
+          <img [src]="images[3]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
