--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-header></app-header> -->
-<app-nav></app-nav>
+<app-nav logged={{loggedIn}}></app-nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
